--- a/wwwroot/_content/Nj.Blazor/Nj.Blazor.bundle.scp.css
+++ b/wwwroot/_content/Nj.Blazor/Nj.Blazor.bundle.scp.css
@@ -1,3 +1,36 @@
+/* _content/Nj.Blazor/Components/Basic/Icon/NjSvgIcon.razor.rz.scp.css */
+.nj-icon-svg[b-2cef3gcm9z] {
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    flex-shrink: 0;
+    user-select: none;
+    fill: currentColor;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.nj-icon-size-small[b-2cef3gcm9z] {
+    font-size: 100%;
+}
+
+.nj-icon-size-medium[b-2cef3gcm9z] {
+    font-size: 150%;
+}
+
+.nj-icon-size-large[b-2cef3gcm9z] {
+    font-size: 200%;
+}
+
+.nj-icon-size-xlarge[b-2cef3gcm9z] {
+    font-size: 250%;
+}
+
+.nj-icon-size-xxlarge[b-2cef3gcm9z] {
+    font-size: 300%;
+}
 /* _content/Nj.Blazor/Components/Basic/Layout/EmptyLayout.razor.rz.scp.css */
 html[b-j3sqewklhb] {
     height: 100vh;
@@ -26,8 +59,170 @@ body[b-5xp7uy7cvb] {
 main[b-5xp7uy7cvb] {
     flex: 1;
 }
+/* _content/Nj.Blazor/Components/Basic/Tabs/NjTabs.razor.rz.scp.css */
+.nj-tabs[b-dr2fh0kc8c] {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.nj-tabs-column[b-dr2fh0kc8c] {
+    flex-direction: column;
+}
+
+    .nj-tabs-column > .nj-tabs-header[b-dr2fh0kc8c] {
+        flex-direction: row;
+    }
+
+.nj-tabs-column-reverse[b-dr2fh0kc8c] {
+    flex-direction: column-reverse;
+}
+
+    .nj-tabs-column-reverse > .nj-tabs-header[b-dr2fh0kc8c] {
+        flex-direction: row;
+    }
+
+.nj-tabs-row[b-dr2fh0kc8c] {
+    flex-direction: row;
+}
+
+    .nj-tabs-row > .nj-tabs-header[b-dr2fh0kc8c] {
+        flex-direction: column;
+    }
+
+.nj-tabs-row-reverse[b-dr2fh0kc8c] {
+    flex-direction: row-reverse;
+}
+
+    .nj-tabs-row-reverse > .nj-tabs-header[b-dr2fh0kc8c] {
+        flex-direction: column;
+    }
+
+.nj-tabs-header[b-dr2fh0kc8c] {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.nj-tabs-content[b-dr2fh0kc8c] {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+/* _content/Nj.Blazor/Components/Basic/Tree/NjTree.razor.rz.scp.css */
+.nj-tree[b-hr18dfgrgt] {
+    display: flex;
+}
+
+    .nj-tree .nj-tree-node .nj-tree-node-title[b-hr18dfgrgt] {
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+        width: 100%;
+        background-color: #ccc;
+    }
+/* _content/Nj.Blazor/Components/Controls/Button/ActionButton/Variants/NjActionButtonVariantFlat.razor.rz.scp.css */
+.nj-action-button.nj-action-button-variant-flat:hover[b-thicenlgw7],
+.nj-action-button.nj-action-button-variant-flat:focus[b-thicenlgw7] {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.nj-action-button.nj-action-button-variant-flat:active[b-thicenlgw7],
+.nj-action-button.nj-action-button-variant-flat.active[b-thicenlgw7] {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+/* _content/Nj.Blazor/Components/Controls/Button/ActionButton/Variants/NjActionButtonVariantRaised.razor.rz.scp.css */
+.nj-action-button.nj-action-button-variant-raised[b-qofcbwlqm4] {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+}
+
+    .nj-action-button.nj-action-button-variant-raised:hover[b-qofcbwlqm4],
+    .nj-action-button.nj-action-button-variant-raised:focus[b-qofcbwlqm4] {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+    }
+
+    .nj-action-button.nj-action-button-variant-raised:active[b-qofcbwlqm4],
+    .nj-action-button.nj-action-button-variant-raised:active[b-qofcbwlqm4] {
+        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.26);
+    }
+
+    .nj-action-button.nj-action-button-variant-raised:disabled[b-qofcbwlqm4] {
+        box-shadow: none;
+    }
+/* _content/Nj.Blazor/Components/Controls/Button/TextButton/Variants/NjTextButtonVariantFlat.razor.rz.scp.css */
+.nj-text-button.nj-text-button-variant-flat:hover[b-w23caatonx],
+.nj-text-button.nj-text-button-variant-flat:focus[b-w23caatonx] {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.nj-text-button.nj-text-button-variant-flat:active[b-w23caatonx],
+.nj-text-button.nj-text-button-variant-flat.active[b-w23caatonx] {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+/* _content/Nj.Blazor/Components/Controls/Button/TextButton/Variants/NjTextButtonVariantRaised.razor.rz.scp.css */
+.nj-text-button.nj-text-button-variant-raised[b-khl3deih1w] {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+}
+
+    .nj-text-button.nj-text-button-variant-raised:hover[b-khl3deih1w],
+    .nj-text-button.raised:focus[b-khl3deih1w] {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+    }
+
+    .nj-text-button.nj-text-button-variant-raised:active[b-khl3deih1w],
+    .nj-text-button.nj-text-button-variant-raised.active[b-khl3deih1w] {
+        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.26);
+    }
+
+    .nj-text-button.nj-text-button-variant-raised:disabled[b-khl3deih1w] {
+        box-shadow: none;
+    }
+/* _content/Nj.Blazor/Components/Controls/Search/NjSearch.razor.rz.scp.css */
+.nj-input-search[b-b3snkycmw7] {
+    cursor: pointer;
+}
+
+.nj-input-search-options[b-b3snkycmw7] {
+    position: absolute;
+    min-width: fit-content;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: var(--input-box-inner-padding);
+}
+
+.nj-input-search-option[b-b3snkycmw7] {
+    cursor: pointer;
+    line-height: var(--input-line-height);
+    padding: var(--input-box-inner-padding);
+}
+
+    .nj-input-search-option:hover[b-b3snkycmw7],
+    .nj-input-search-option.active[b-b3snkycmw7] {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+/* _content/Nj.Blazor/Components/Features/CodeHighlight/NjCodeHighlight.razor.rz.scp.css */
+.code-container[b-mywngn2g9l] {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    position: relative;
+    display: block;
+}
+
+code.nj-highlight-theme-default[b-mywngn2g9l] {
+    display: block;
+    background-color: #ededed;
+    color: #000000;
+    white-space: pre-wrap;
+    padding: 1rem;
+}
+
+    code.nj-highlight-theme-default span[b-mywngn2g9l] {
+        display: inline;
+        word-wrap: break-word;
+        word-break: break-all;
+    }
 /* _content/Nj.Blazor/Components/Features/FileRenderer/NjFileRenderer.razor.rz.scp.css */
-.nj-file-renderer[b-9kj4lzcfph]{
+.nj-file-renderer[b-9kj4lzcfph] {
     padding: 0 2rem;
 }
 
@@ -41,7 +236,7 @@ main[b-5xp7uy7cvb] {
 }
 
 .nj-file-renderer-content-gotop[b-9kj4lzcfph] {
-    cursor:pointer;
+    cursor: pointer;
     position: relative;
     bottom: 0;
     right: 0;
@@ -50,8 +245,8 @@ main[b-5xp7uy7cvb] {
     transform: translate(-2rem, -3rem);
 }
 
-.nj-file-renderer-buttons-close-doc[b-9kj4lzcfph]{
-    cursor:pointer;
+.nj-file-renderer-buttons-close-doc[b-9kj4lzcfph] {
+    cursor: pointer;
 }
 /* _content/Nj.Blazor/Components/Features/ThemeManager/ModeSelector/Variants/NjThemeModeSelectorVariantFlat.razor.rz.scp.css */
 .nj-theme-mode-selector[b-7nywdse76v] {
@@ -174,3 +369,113 @@ main[b-5xp7uy7cvb] {
         border-radius: calc(var(--sizeAdjustment) * 25px);
         box-shadow: calc(var(--sizeAdjustment) * 30px) calc(var(--sizeAdjustment) * 30px) 0px white, calc(var(--sizeAdjustment) * 50px) calc(var(--sizeAdjustment) * 20px) 0px white, calc(var(--sizeAdjustment) * 65px) calc(var(--sizeAdjustment) * 25px) 0px white, calc(var(--sizeAdjustment) * 29px) calc(var(--sizeAdjustment) * 28px) 0px #d7d7d7, calc(var(--sizeAdjustment) * 49px) calc(var(--sizeAdjustment) * 18px) 0px #d7d7d7, calc(var(--sizeAdjustment) * 65px) calc(var(--sizeAdjustment) * 23px) 0px #d7d7d7;
     }
+/* _content/Nj.Blazor/Components/Inputs/Dropdown/Variants/NjInputDropdownVariantFilled.razor.rz.scp.css */
+.nj-input.nj-input-dropdown.nj-input-dropdown-variant-filled[b-qn20jycxk8] {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+/* _content/Nj.Blazor/Components/Inputs/Dropdown/Variants/NjInputDropdownVariantOutline.razor.rz.scp.css */
+.nj-input.nj-input-dropdown.nj-input-dropdown-variant-outline[b-m7cpdqhzqk]:before {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    transition: border-bottom .2s, background-color .2s;
+    border: 1px solid var(--palette-inputBorderColor);
+    pointer-events: none;
+    height: 100%;
+}
+
+.nj-input.nj-input-dropdown.nj-input-dropdown-variant-outline[b-m7cpdqhzqk]:after {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    transition: transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+    border-bottom: 2px solid var(--palette-primary);
+    pointer-events: none;
+    height: 100%;
+}
+/* _content/Nj.Blazor/Components/Inputs/File/Variants/NjInputFileVariantFlat.razor.rz.scp.css */
+.nj-input-file.nj-input-file-variant-flat:hover[b-hvh7xxk8vd],
+.nj-input-file.nj-input-file-variant-flat:focus[b-hvh7xxk8vd] {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.nj-input-file.nj-input-file-variant-flat:active[b-hvh7xxk8vd] {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+/* _content/Nj.Blazor/Components/Inputs/File/Variants/NjInputFileVariantRaised.razor.rz.scp.css */
+.nj-input-file.nj-input-file-variant-raised[b-ne68ppv33x] {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+}
+
+    .nj-input-file.nj-input-file-variant-raised:hover[b-ne68ppv33x],
+    .nj-input-file.raised:focus[b-ne68ppv33x] {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+    }
+
+    .nj-input-file.nj-input-file-variant-raised:active[b-ne68ppv33x] {
+        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.26);
+    }
+
+    .nj-input-file.nj-input-file-variant-raised:disabled[b-ne68ppv33x] {
+        box-shadow: none;
+    }
+/* _content/Nj.Blazor/Components/Inputs/Number/Variants/NjInputNumberVariantFilled.razor.rz.scp.css */
+.nj-input.nj-input-number-variant-filled[b-fpz1y5hbni] {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+/* _content/Nj.Blazor/Components/Inputs/Number/Variants/NjInputNumberVariantOutline.razor.rz.scp.css */
+.nj-input.nj-input-number-variant-outline.nj-underline[b-a8liuds0fv]:before {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    transition: border-bottom .2s, background-color .2s;
+    border: 1px solid var(--palette-inputBorderColor);
+    pointer-events: none;
+    height: 100%;
+}
+
+.nj-input.nj-input-number-variant-outline.nj-underline[b-a8liuds0fv]:after {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    transition: transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+    border-bottom: 2px solid var(--palette-primary);
+    pointer-events: none;
+    height: 100%;
+}
+/* _content/Nj.Blazor/Components/Inputs/Text/Variants/NjInputTextVariantFilled.razor.rz.scp.css */
+.nj-input.nj-input-text-variant-filled[b-ka6vn1r221] {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+/* _content/Nj.Blazor/Components/Inputs/Text/Variants/NjInputTextVariantOutline.razor.rz.scp.css */
+.nj-input.nj-input-text-variant-outline.nj-underline[b-m27kmwew09]:before {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    transition: border-bottom .2s, background-color .2s;
+    border: 1px solid var(--palette-inputBorderColor);
+    pointer-events: none;
+    height: 100%;
+}
+
+.nj-input.nj-input-text-variant-outline.nj-underline[b-m27kmwew09]:after {
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    transition: transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+    border-bottom: 2px solid var(--palette-primary);
+    pointer-events: none;
+    height: 100%;
+}
